# esportligaen-scraper

./: .isort.cfg  LICENSE  README.md  pyproject.toml
src/: main.py  settings.py
